Fixed bug with profile image being empty on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -608,6 +608,10 @@ nav {
     display: none;
   }
 
+  .empty-profile-image {
+    display: none;
+  }
+
   .profile-image {
     flex-basis: 75px;
     width: 20vw;
